# m64-movie

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml  rust.yml
doc/: m64.md
examples/: main.rs  parsed-movie.rs  raw-movie.rs
src/: doc.rs  lib.rs  m64.rs  main.rs  movie.rs  shared.rs
src/parsed/: m64.rs  mod.rs
src/raw/: m64.rs  mod.rs
tests/: m64.rs  movie.rs  shared.rs
